[tool.poetry]
name = "test"
version = "0.1.0"
description = "this is for test"
authors = ["raufur <raufur.rahman@brilliant.com.bd>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
flask-restx = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
